--- a/app/code/Savchenko/CheckoutStep/view/frontend/layout/checkout_index_index.xml
+++ b/app/code/Savchenko/CheckoutStep/view/frontend/layout/checkout_index_index.xml
@@ -54,6 +54,13 @@
                                                     <item name="component" xsi:type="string">Savchenko_CheckoutStep/js/view/summary/buttons-set</item>
                                                     <item name="displayArea" xsi:type="string">summary</item>
                                                     <item name="sortOrder" xsi:type="string">40</item>
+                                                    <item name="children" xsi:type="array">
+                                                        <item name="messages" xsi:type="array">
+                                                            <item name="sortOrder" xsi:type="string">0</item>
+                                                            <item name="component" xsi:type="string">Magento_Ui/js/view/messages</item>
+                                                            <item name="displayArea" xsi:type="string">summary</item>
+                                                        </item>
+                                                    </item>
                                                 </item>
                                             </item>
                                         </item>
