ready for review

--- a/app/code/Savchenko/CheckoutStep/view/frontend/web/template/payment/cashondelivery.html
+++ b/app/code/Savchenko/CheckoutStep/view/frontend/web/template/payment/cashondelivery.html
@@ -33,7 +33,7 @@
                         css: {disabled: !isPlaceOrderActionAllowed()}
                         "
                         disabled>
-                    <span data-bind="i18n: 'Place Order Your'"></span>
+                    <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
         </div>
